# leetcode

./: .gitignore
0021_merge_two_sorted_lists/: CMakeLists.txt  xmake.lua
0098_validate_binary_search_tree/: .clang-format  0098_test1.monopic  0098_test2.monopic  0098_test76.monopic  CMakeLists.txt  xmake.lua
0102_binary_tree_level_order_traversal/: .gitignore  CMakeLists.txt  xmake.lua
0121_best_time_to_buy_and_sell_stock/: .gitignore  0121_best_time_to_buy_and_sell_stock.sln  0121_best_time_to_buy_and_sell_stock.vcxproj  pch.h  test.cpp
0142_linked_list_cycle_ii/: CMakeLists.txt  xmake.lua
0200_number_of_islands/: CMakeLists.txt  xmake.lua
0205_isomorphic_strings/: CMakeLists.txt  xmake.lua
0206_reverse_linked_list/: CMakeLists.txt  xmake.lua
0235_lowest_common_ancestor_bst/: CMakeLists.txt  xmake.lua
0278_first_bad_version/: CMakeLists.txt  xmake.lua
0383_ransom_note/: CMakeLists.txt  xmake.lua
0392_is_subsequence/: .clang-format  CMakeLists.txt  xmake.lua
0409_longest_palindrome/: .gitignore  xmake.lua
0412_fizzbuzz/: .clang-format  CMakeLists.txt  xmake.lua
0589_nary_tree_preorder_traversal/: .clang-format  CMakeLists.txt  test1.monopic  test2.monopic  xmake.lua
0704_binary_search/: .gitignore  CMakeLists.txt  xmake.lua
0724_find_pivot_index/: CMakeLists.txt  xmake.lua
0733_flood_fill/: CMakeLists.txt  xmake.lua
0876_mid_linked_list/: CMakeLists.txt  xmake.lua
1342_number_of_steps_to_reduce_to_zero/: CMakeLists.txt  xmake.lua
1480_running_sum/: CMakeLists.txt  main.cpp  xmake.lua
1672_richest_customer_wealth/: CMakeLists.txt  (+1 more)
(+37 files in other folders)
